# Defence

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  vcpkg.json
headers/: achievement_system.h  animation_holder.h  antitank_gun.h  building_buttons.h  camera.h  covering_database.h  debugger.h  enemy_manager.h  game_state.h  game_ui.h  net_manager.h  params_manager.h  resource_manager.h  rotating_gun_base.h  shader_manager.h  sound_manager.h  sprite_chain.h  texture_manager.h  tile_map.h  twin_gun.h  wave_controller.h
headers/enemies/: IEnemy.h  cruiser_I.h  enemy_container.h  simple_enemy.h  smoke.h  solder.h
headers/gui/: building_buttons.h  console.h  enters.h  help.h  icon.h  icon_button.h  info_panel.h  label.h  layered_icon.h  next_wave_button.h  scale.h  scroller.h  slider.h  switch.h  text_button.h  tiled_panel.h  tooltip.h  upgrade_panel.h  widget.h
headers/guns/: antitank_gun.h  building.h  building_cost_computer.h  building_with_health.h  hedgehog.h  mine.h  minigun.h  radar.h  radio_mast.h  radio_tower.h  rotating_gun_base.h  spikes.h  twin_gun.h
headers/utils/: animation.h  framers.h  sprite_chain.h
source/: achievement_system.cpp  animation_holder.cpp  antitank_gun.cpp  building_buttons.cpp  camera.cpp  covering_database.cpp  debugger.cpp  enemy_manager.cpp  game_state.cpp  game_ui.cpp  main.cpp  net_manager.cpp  params_manager.cpp  resource_manager.cpp  rotating_gun_base.cpp  shader_manager.cpp  sound_manager.cpp  sprite_chain.cpp  texture_manager.cpp  tile_map.cpp  twin_gun.cpp  wave_controller.cpp
source/enemies/: IEnemy.cpp  cruiser_I.cpp  enemy_container.cpp  simple_enemy.cpp  smoke.cpp  solder.cpp
source/gui/: building_buttons.cpp  console.cpp  enters.cpp  help.cpp  icon.cpp  icon_button.cpp  (+13 more)
workdir/: Decals.sbs  Defence.sbs  params.json
(+28 files in other folders)
